# cambang

./: .clang-tidy  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SConstruct
.github/: FUNDING.yml
.github/workflows/: docs-sync.yml
docs/: CONTRIBUTING.md  HOWTO-build_draft.txt  INDEX.md  README.md  THIRD_PARTY_NOTICES.md  adc_camera_description_v2.md  arbitration_policy.md  camera_fact_model.md  core_runtime_model.md  filestructure_guide_tmp.md  naming.md  provider_architecture.md  provider_implementation_brief.md  repo_structure.md  state_snapshot.md  status_panel_surface_policy.md
docs/architecture/: applied_profile_runtime_truth.md  frame_sinks.md  godot_boundary_contract.md  imaging_spec_seam.md  lifecycle_hierarchy_and_event_flow.md  lifecycle_model.md  pattern_module.md  pixel_payload_and_result_contract.md  provider_lifecycle_state_machine.md  provider_state_machines.md  provider_strand_model.md  provider_strand_unification.md  publication_counter_examples.md  publication_model.md  synthetic_picture_appearance_in_scenarios.md  synthetic_timeline_scenarios.md  tick_bounded_publication_core_to_godot_coalescing.md  tick_bounded_publication_version_vs_topology_version.md
docs/dev/: agent_context.md  backing_plan_parent_evaluation_reset.md  build_and_scaffolding.md  cambang_ui_design_standard_integrated.md  cambangstatuspanel_mappings.md  codebase_audit_remediation_plan.md  cpp_audit_checklist.md  cpp_code_quality_policy.md  current_tranche.md  first_result_surface.md  frameview_stage.md  gde_build_loop_windows.md  gde_scaffolding_windows_mingw.md  godot_abuse_scenes.md  maintainer_tools.md  pixel_result_architecture_direction.md  producer_backing_capability_notes.md  provider_compliance_checklist.md  scons_intent.md  snapshot_truth_rules.md  state_snapshot_schema_mapping.md  static_analysis.md  status_panel_fixture_taxonomy.md  still_capture_result_assembly_status.md  synthetic_timeline_reconciliation_notes.md  testing_audit_lenses.md  upstream_discrepancies.md  windows_mf_visibility_phase.md
external_scenarios/: absolute_minimal_scenario.json  stream_load_1x_1080p30.json  stream_load_1x_720p30.json  stream_load_2x_1080p30.json  stream_load_2x_1080p30_moving_bar.json  stream_load_2x_720p30.json
ide/: core_spine_smoke.cpp  ide_dummy.cpp
scripts/: gdscript_to_xml.py  gdscript_to_xml_readme.md  run_core_thread_liveness_watchdog_verify.ps1  sync_docs.sh
site_scons/site_tools/: compdb.py
src/core/: adc_camera_description.cpp  adc_camera_description.h  camera_concurrency_adc.cpp  camera_concurrency_adc.h  camera_fact_types.h  capture_admission_context.cpp  capture_admission_context.h  core_acquisition_session_registry.cpp  core_acquisition_session_registry.h  core_capture_assembly_registry.cpp  core_capture_assembly_registry.h  core_capture_cohort_registry.cpp  core_capture_cohort_registry.h  core_device_registry.cpp  core_device_registry.h  core_dispatcher.cpp  core_dispatcher.h  core_frame_sink.h  core_mailbox.h  core_native_object_registry.cpp  core_native_object_registry.h  core_publisher.h  core_publisher_buffer.h  core_result_store.cpp  core_result_store.h  core_rig_registry.cpp  core_rig_registry.h  core_runtime.cpp  core_runtime.h  core_runtime_state.h  core_snapshot.h  core_spec_state.cpp  core_spec_state.h  core_stream_registry.cpp  core_stream_registry.h  core_thread.cpp  core_thread.h  external_camera_description_state.h  gpu_backing_runtime_noop.cpp  i_state_snapshot_publisher.h  (+16 more)
src/dev/: cli_log.h
src/godot/: bounded_render_resource_release_queue.h  cambang_capture_result.cpp  cambang_capture_result.h  cambang_capture_result_set.cpp  cambang_capture_result_set.h  cambang_device.cpp  cambang_device.h  cambang_result_convert.cpp  cambang_result_convert.h  cambang_result_convert_timing.cpp  cambang_result_convert_timing.h  cambang_rig.cpp  cambang_rig.h  cambang_server.cpp  cambang_server.h  cambang_server_tick_node.cpp  cambang_server_tick_node.h  cambang_state_snapshot.cpp  cambang_state_snapshot.h  cambang_stream.cpp  cambang_stream.h  cambang_stream_result.cpp  cambang_stream_result.h  cambang_stream_result_internal.cpp  cambang_stream_result_internal.h  display_demand_dispatcher.h  godot_gpu_display_service.cpp  godot_gpu_display_service.h  module_init.cpp  render_resource_release_internal_smoke.cpp  render_resource_release_internal_smoke.h  render_resource_release_service.cpp  render_resource_release_service.h  result_access_cost_evidence.cpp  result_access_cost_evidence.h  retained_result_access_calibration.cpp  retained_result_access_calibration.h  state_snapshot_export.cpp  state_snapshot_export.h  synthetic_gpu_backing_bridge.cpp  (+2 more)
src/provider/: provider_contract_datatypes.h  provider_error_string.cpp
src/smoke/: core_capture_assembly_registry_smoke.cpp  core_result_path_smoke.cpp  (+20 more)
(+245 files in other folders)
